[fix] #326 changes highlighting to be more accessable and handle overlaps.
Also changes color in professional tone to break association with highlighting.

--- a/frontend/components/Review/Review.scss
+++ b/frontend/components/Review/Review.scss
@@ -1,8 +1,15 @@
 @use "sass:meta";
 
 .review {
-  --highlight-1-bg: #e4ff92;
-  --highlight-1-text: black;
+  // --highlight-1-bg: #e4ff92;
+  --highlight-1-border: #00682c;
+
+  @mixin underline_highlight($color: var(--highlight-1-border)) {
+    text-decoration: underline;
+    text-decoration-color: $color;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+  }
 
   .select-button {
     div {
@@ -37,18 +44,22 @@
   }
 
   span.highlight-1 {
-    text-decoration: underline;
+    // needed for user text
+    @include underline_highlight();
   }
 
   .highlight {
-    background-color: var(--bs-highlight);
+    &.highlight-0 {
+      // used for user text and tools
+      background-color: var(--bs-highlight);
+    }
 
     &.highlight-1 {
-      background-color: var(--highlight-1-bg);
-      color: var(--highlight-1-text);
+      // used for tools
+
       li,
       span {
-        text-decoration: underline;
+        @include underline_highlight();
       }
     }
   }
